force-app/main/default/objects/Activity/fields/aanvraag_id__c.field-meta.xml
<CustomField>
    <fullName>aanvraag_id__c</fullName>
    <label>aanvraag_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>