force-app/main/default/objects/Activity/fields/company_id__c.field-meta.xml
<CustomField>
    <fullName>company_id__c</fullName>
    <label>company_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>