force-app/main/default/objects/Activity/fields/extra_info__c.field-meta.xml
<CustomField>
    <fullName>extra_info__c</fullName>
    <label>extra_info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>