force-app/main/default/objects/Activity/fields/factuur_id__c.field-meta.xml
<CustomField>
    <fullName>factuur_id__c</fullName>
    <label>factuur_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>