force-app/main/default/objects/Activity/fields/isImported__c.field-meta.xml
<CustomField>
    <fullName>isImported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isImported</label>
    <type>Checkbox</type>
</CustomField>