force-app/main/default/objects/Activity/fields/Mailshot_Email__c.field-meta.xml
<CustomField>
    <fullName>Mailshot_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailshot Email</label>
    <type>Checkbox</type>
</CustomField>