force-app/main/default/objects/Activity/fields/person_id__c.field-meta.xml
<CustomField>
    <fullName>person_id__c</fullName>
    <label>person_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>