force-app/main/default/objects/Activity/fields/project_id__c.field-meta.xml
<CustomField>
    <fullName>project_id__c</fullName>
    <label>project_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>