force-app/main/default/objects/Activity/fields/ref_type_id__c.field-meta.xml
<CustomField>
    <fullName>ref_type_id__c</fullName>
    <label>ref_type_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>