force-app/main/default/objects/Activity/fields/Shotlisted__c.field-meta.xml
<CustomField>
    <fullName>Shotlisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shotlisted</label>
    <type>Checkbox</type>
</CustomField>