force-app/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facturen</fullName>
            </value>
            <value>
                <fullName>Belangrijk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>